# ai-app-platform

./: PRD_new.md  README.md  pyproject.toml
docs/: PRD.md  PRD_old.md
features/account_activation/: handlers.py  workflow.yaml
features/account_activation/templates/: account_blocked.jinja2  account_preferences.jinja2  activation_complete.jinja2  already_active.jinja2  collect_intent.jinja2  confirm_activation.jinja2  farewell.jinja2  greeting.jinja2  request_documents.jinja2
features/address_change/: handlers.py  workflow.yaml
features/address_change/templates/: address_updated.jinja2  collect_address.jinja2  collect_intent.jinja2  confirm_address.jinja2  farewell.jinja2  greeting.jinja2
features/card_replacement/: handlers.py  workflow.yaml
features/card_replacement/templates/: card_tracking_status.jinja2  claim_summary.jinja2  collect_intent.jinja2  confirm_address.jinja2  delivery_options.jinja2  expedite_confirmation.jinja2  farewell.jinja2  fee_confirmation.jinja2  greeting.jinja2  identify_card.jinja2  no_active_orders.jinja2  replacement_confirmation.jinja2  replacement_reason.jinja2
features/reduce_credit_limit/: handlers.py  workflow.yaml
features/reduce_credit_limit/templates/: cancel_confirmation.jinja2  collect_intent.jinja2  confirm_reduction.jinja2  current_limit_info.jinja2  enter_new_limit.jinja2  farewell.jinja2  greeting.jinja2  limit_too_low.jinja2  no_pending_changes.jinja2  pending_changes_status.jinja2  reduction_complete.jinja2
platform/workflows/: _base.yaml
src/ai_platform/auth/: identity_verifier.py
(+17 files in other folders)
